Working login, quiz, routing, database

--- a/views/quiz.hbs
+++ b/views/quiz.hbs
@@ -1,3 +1,6 @@
+  <link rel="stylesheet" href="./stylesheets/style1.css">
+ 
+
   <div class="quizContainer container-fluid well well-lg" style="padding-top: 8em;">
       <div id="quiz1" class="text-center">
 			  <h3 style="color:#d14040;position:center;left:80%;top:0%;" align="Center" ><span id="Modern History Of India Quiz part 01 for all Exams">Online Home Exams 2023</span><br/><span id='Modern History Of India Quiz part 01 for all Exams' style="font-size:25px;"></span></h3>
@@ -23,7 +26,7 @@
       <div class="quiz-over">
           <div class="box">
                <h1>Good Try!<br>You Got <span class="correct-answers"></span> out of <span class="total-question2"></span> answers correct! <br>That's <span class="percentage"></span></h1>
-              <button type="button" onclick="tryAgain()">TryAgain</button>
+              <button type="button" onclick="tryAgain()">Return to home</button>
            </div>
        </div>
  <div class="wrapper my-fluid-container footer-gray">
