--- a/public/stylesheets/style1.css
+++ b/public/stylesheets/style1.css
@@ -1,6 +1,6 @@
 body{
  margin:0;
- background-color:#d9cdcd;
+ background-color:#ffffff;
  font-family: Poppins;
 }
 *{
@@ -218,23 +218,7 @@ body{
     margin-top: 30px;
 }
 
-.navbar-brand {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    top: -55px;
-}
-.navbar-brand img {
-    background-color: #fff;
-    border: 2px solid #aa0012;
-    padding: 6px;
-}
-.navbar-light .navbar-brand {
-    color: rgba(0, 0, 0, 0.9);
-    background-color: #fff;
-    padding: 9px;
-    box-shadow: 0.7px 4px 4px 1px rgba(0 ,0 , 0, .07), 0 3px 1px -2px rgba(0, 0, 0, .07), 0 1px 5px 0 rgba(0, 0, 0, .07);
-}
+
 .container {
     width: 100%;
     padding-right: 15px;
