--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,18 +4,18 @@
     {{!-- <p class="lead">Create an account. Already have one?
         <a href="/login">Login Now</a>
     </p> --}}
-    <form action="/quiz" method="post" role='form' class="col-lg-12 mx-auto">
+    <form action="/login" {{!-- onsubmit="return validateForm()" --}} method="post" role='form' class="col-lg-12 mx-auto" name="register-form">
         <div class="form-group">
             <label for="username"></label>
-            <input type="text" class="form-control" id="username" name="username" placeholder="Enter your name">
+            <input type="text" class="form-control" id="username" name="username" placeholder="Enter your name" required pattern="[a-zA-Z ]{4,20}">
         </div>
         <div class="form-group">
             <label for="phone"></label>
-            <input type="tel" class="form-control" id="phone" name="phone" placeholder="Enter Mobile Number">
+            <input type="tel" class="form-control" id="phone" name="phone" placeholder="Enter Mobile Number" required pattern="[0-9]{10}" >
         </div>
         <div class="form-group">
             <label for="class"></label>
-            <select name="class" id="class" name="class" class="form-control">
+            <select name="class" id="class" name="class" class="form-control" required>
                 <option value="" disabled="disabled" selected="selected">Select your class</option>
                 <option value="5">Class 5</option>
                 <option value="6">Class 6</option>
@@ -33,4 +33,4 @@
         </div>
     </form>
 </div>
-
+<script src="../public/javascripts/validation.js"></script>
