Quiz selector not working

--- a/views/quiz.hbs
+++ b/views/quiz.hbs
@@ -1,10 +1,9 @@
   <link rel="stylesheet" href="./stylesheets/style1.css">
- 
 
-  <div class="quizContainer container-fluid well well-lg" style="padding-top: 8em;">
+  <div class="quizContainer container-fluid well well-lg">
       <div id="quiz1" class="text-center">
-			  <h3 style="color:#d14040;position:center;left:80%;top:0%;" align="Center" ><span id="Modern History Of India Quiz part 01 for all Exams">Online Home Exams 2023</span><br/><span id='Modern History Of India Quiz part 01 for all Exams' style="font-size:25px;"></span></h3>
-			  <h2 Style="color:#ff000;position:center;left:80%;top0%;" align="center" "font-size:25px;"><samp id="Sub heading"> TEST QUIZ 1</samp></h2>
+			  <h3 style="color:#d14040;position:center;left:80%;top:0%;" align="Center" ><span id="Modern History Of India Quiz part 01 for all Exams">Students India Quiz</span><br/><span id='Modern History Of India Quiz part 01 for all Exams' style="font-size:25px;"></span></h3>
+			  {{!-- <h2 Style="color:#ff000;position:center;left:80%;top0%;" align="center" "font-size:25px;"><samp id="Sub heading"> TEST QUIZ 1</samp></h2> --}}
       </div>  
       <div class="quiz-container">
         <div class="question-number">
