--- a/views/quiz10.hbs
+++ b/views/quiz10.hbs
@@ -1,5 +1,7 @@
   <link rel="stylesheet" href="./stylesheets/style1.css">
 
+  
+
   <div class="quizContainer container-fluid well well-lg">
       <div id="quiz1" class="text-center">
 			  <h3 style="color:#d14040;position:center;left:80%;top:0%;" align="Center" ><span id="Modern History Of India Quiz part 01 for all Exams">Students India Quiz</span><br/><span id='Modern History Of India Quiz part 01 for all Exams' style="font-size:25px;"></span></h3>
@@ -50,7 +52,9 @@
 
 </div>
 
-<script src="/javascripts/script.js"></script>
+
+<script src="/javascripts/script10.js"></script>
+
 <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-122944520-2"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
